Vector/test/indexOf/listIndexOfHaltStart.good
listIndexOfHaltStart.chpl:10: error: halt reached - Start index for "listng.indexOf" out of bounds: -1
